# MIA-Proyecto1-201904061

./: CMakeLists.txt  Command.cpp  Command.h  README.md  main.cpp
MIA-Practica-201904061/: avanze.sql  carga_country_codes.sql  carga_geonames.sql  carga_level_1a.sql  carga_locations.sql  carga_projects.sql  carga_transactions.sql  consultas.sql  crear_base_datos.sql  eliminarTablas.sql  finales.sql  modelo_logico.dmd  modelo_relacional.dmd  practica.sh  roles.sql  tablasRelacionadas.sql  temporales.sql
MIA-Practica-201904061/CSV's Tabulados/: contry_codes.txt  locations.txt  transactions.txt
MIA-Practica-201904061/CSVS/: level_1a.csv
MIA-Practica-201904061/modelo_logico/: dl_settings.xml
MIA-Practica-201904061/modelo_logico/businessinfo/: Business Information.xml
MIA-Practica-201904061/modelo_logico/datatypes/: DataTypes.xml
MIA-Practica-201904061/modelo_logico/logical/: Logical.xml
MIA-Practica-201904061/modelo_logico/mapping/: ExtendedMap_RM509902DA-14D8-E032-5C45-D425ECBE78D6.xml
analizador/: parser.cpp  parser.h  parser.y  scanner.cpp  scanner.l
src/: main.cpp  structs.h
src/ArchivosPrueba/: entrada.sh  prueba.bat  prueba.sh
src/Entidades/: Disco.cpp  Disco.h
src/analizador/: parser.cpp  parser.h  parser.y  scanner.cpp  scanner.h  scanner.l
src/comandos/: Command.cpp  Command.h  Exec.cpp  Fdisk.cpp  Fdisk.h  Find.cpp  Find.h  Logout.cpp  Logout.h  Mkdir.cpp  Mkdir.h  Mkdisk.cpp  Mkdisk.h  Mkfs.cpp  Mkfs.h  Mkgrp.cpp  Mkgrp.h  Mkuser.cpp  Mkuser.h  Mount.cpp  Pause.cpp  Pause.h  Rep.cpp  Rep.h  Rmdisk.cpp  Rmdisk.h
(+85 files in other folders)
